--- a/muestraReglasIptables.html
+++ b/muestraReglasIptables.html
@@ -26,7 +26,7 @@
 
 			</form>
 
-			<form method="get" action="http://localhost/dit/cgi-bin/muestraReglasIptables.out" style="display:inline">
+			<form method="get" action="muestraReglasIptables.html" style="display:inline">
 
 				<button type="submit">
 					Muestra Reglas Iptables
@@ -62,7 +62,7 @@
 
 		<p>
 
-			<form method="get" action="muestraRegistroReglasMITM.html" style="display:inline">
+			<form method="get" action="http://localhost/dit/cgi-bin/muestraReglasIptables.out" style="display:inline">
 
 				<button type="submit">
 					Actualizar reglas
@@ -72,14 +72,8 @@
 
 		</p>
 
-		<div>
-
-			<p>
-				<iframe src="registro_reglas_MITM" height="500" width="95%"></iframe>
-			</p>
-
-		</div>
-
 	</body>
 
 </html>
+
+			
