--- a/muestrareglas.html
+++ b/muestrareglas.html
@@ -50,6 +50,13 @@
 			
 			</form>
 
+			<form method="get" action="http://localhost/dit/cgi-bin/borraRegla.out" style="display:inline">
+			
+				<button type="submit">
+					Borrar Reglas
+				</button>
+			
+			</form>
 		</p>
 
 		<p>
