--- a/prueba.html
+++ b/prueba.html
@@ -49,6 +49,14 @@
 			
 			</form>
 
+			<form method="get" action="http://localhost/dit/cgi-bin/borraRegla.out" style="display:inline">
+			
+				<button type="submit">
+					Borrar Reglas
+				</button>
+			
+			</form>
+
 		</p>
 
 	</body>
