--- a/muestraClientesRegistrados.html
+++ b/muestraClientesRegistrados.html
@@ -3,6 +3,7 @@
 <html>
 
 	<head>
+		<link rel="stylesheet" type="text/css" href="hoja_estilo.css">
 		<title> Gestion WIPS </title>
 	</head>
 
@@ -57,14 +58,14 @@
 				</button>
 			
 			</form>
-			
+
 		</p>
 
 		<p>
 
-			<form action="http://localhost/dit/Pag_Web/muestraClientesRegistrados.html" style="display:inline">
+			<form action="muestraClientesRegistrados.html" style="display:inline">
 
-				<button>
+				<button type="submit" class="button1">
 					Actualizar registro
 				</button>	
 
