--- a/muestraRegistroReglasMITM.html
+++ b/muestraRegistroReglasMITM.html
@@ -3,6 +3,7 @@
 <html>
 
 	<head>
+		<link rel="stylesheet" type="text/css" href="hoja_estilo.css">
 		<title> Gestion WIPS </title>
 	</head>
 
@@ -64,7 +65,7 @@
 
 			<form method="get" action="muestraRegistroReglasMITM.html" style="display:inline">
 
-				<button type="submit">
+				<button type="submit" class="button1">
 					Actualizar reglas
 				</button>	
 
@@ -75,7 +76,7 @@
 		<div>
 
 			<p>
-				<iframe src="registro_reglas_MITM" height="500" width="95%"></iframe>
+				<iframe src="registro_reglas_MITM"></iframe>
 			</p>
 
 		</div>
