--- a/muestrareglas.html
+++ b/muestrareglas.html
@@ -3,6 +3,7 @@
 <html>
 
 	<head>
+		<link rel="stylesheet" type="text/css" href="hoja_estilo.css">
 		<title> Gestion WIPS </title>
 	</head>
 
@@ -62,7 +63,7 @@
 		<p>
 			<form method="get" action="muestrareglas.html" style="display:inline">
 			
-				<button type="submit">
+				<button type="submit" class="button1">
 					Actualizar reglas
 				</button>
 			
@@ -72,7 +73,7 @@
 		<div>
 			
 			<p>
-				<iframe src="local.rules" height="500" width="95%"></iframe>
+				<iframe src="local.rules"></iframe>
 			</p>
 		
 		</div>
