--- a/muestraClientesRegistrados.html
+++ b/muestraClientesRegistrados.html
@@ -19,10 +19,10 @@
 				</button>
 			</form>
 
-			<form method="get" action="muestrareglas.html" style="display:inline">
+			<form method="get" action="http://localhost/dit/cgi-bin/muestraReglasSnort.out" style="display:inline">
 
 				<button type="submit">
-					Muestra Reglas Snort
+					Reglas Snort
 				</button>
 
 			</form>
@@ -30,7 +30,7 @@
 			<form method="get" action="http://localhost/dit/cgi-bin/muestraReglasIptables.out" style="display:inline">
 
 				<button type="submit">
-					Muestra Reglas Iptables
+					Reglas Iptables
 				</button>
 
 			</form>
@@ -38,15 +38,15 @@
 			<form method="get" action="muestraClientesRegistrados.html" style="display:inline">
 
 				<button type="submit">
-					Muestra Clientes Registrados
+					Clientes Registrados
 				</button>
 
 			</form>
 
-			<form method="get" action="muestraRegistroReglasMITM.html" style="display:inline">
+			<form method="get" action="http://localhost/dit/cgi-bin/muestraRegistroReglasMITM.out" style="display:inline">
 
 				<button type="submit">
-					Muestra Registro Reglas MITM
+					Registro Reglas MITM
 				</button>
 
 			</form>
