--- a/prueba.html
+++ b/prueba.html
@@ -34,7 +34,7 @@
 			
 			</form>
 
-			<form method="get" action="muestraClientesRegistrados.html" style="display:inline">
+			<form method="get" action="http://localhost/dit/jsp/muestraClientesRegistrados.jsp" style="display:inline">
 			
 				<button type="submit">
 					Clientes Registrados
