--- a/wips.html
+++ b/wips.html
@@ -10,6 +10,10 @@
 	
 	<head>
 		<!--
+			Añadimos el logo en la cabecera
+		-->
+		<link rel="icon" type="image/png" href="logo.png"/>
+		<!--
 			Definimos en la cabecera el título de la página 
 			y la hoja de estilos que se aplicará
 		-->
@@ -77,7 +81,9 @@
 			</form>
 
 		</p>
-
+		<div>
+			<img src="logo.png" />
+		</div>
 	</body>
 
 </html>
