--- a/wips.html
+++ b/wips.html
@@ -18,7 +18,7 @@
 			y la hoja de estilos que se aplicará
 		-->
 		<link rel="stylesheet" type="text/css" href="hoja_estilo.css">
-		<title> Gestion WIPS </title>
+		<title> Gesti&oacuten WIPS </title>
 	</head>
 	
 	<body>
@@ -68,6 +68,14 @@
 			
 				<button type="submit">
 					Registro Reglas MITM
+				</button>
+			
+			</form>
+
+			<form method="get" action="http://localhost/dit/jsp/muestraLogsWIPS.jsp" style="display:inline">
+			
+				<button type="submit">
+					Logs WIPS
 				</button>
 			
 			</form>
