--- a/wips.html
+++ b/wips.html
@@ -30,7 +30,7 @@
 			Indicamos la dirección a la que nos dirigimos si se pulsa 
 			ese botón, el método con el que se realizará la petición y
 			el estilo del botón, que será en línea para que todos aparezcan
-			en la parte superior
+			en una única fila en la parte superior
 		-->
 			<form method="get" action="wips.html" style="display:inline">
 				
@@ -89,6 +89,10 @@
 			</form>
 
 		</p>
+
+		<!--
+			Insertamos la imagen principal
+		-->
 		<div>
 			<img src="logo.png" />
 		</div>
